[gd_scene load_steps=8 format=3 uid="uid://hg27d5ann3sa"]

[ext_resource type="Script" uid="uid://diomsq2554omf" path="res://ui/level_selection/level_selection.gd" id="1_2tyw7"]
[ext_resource type="Texture2D" uid="uid://bbd4pw0bponif" path="res://assets/Menu/window.png" id="1_a7te6"]
[ext_resource type="Texture2D" uid="uid://dkbc73bketc4f" path="res://assets/Menu/Lucid V1.2/SVG/Flat/Chevron-Arrow-Left.svg" id="2_2tyw7"]
[ext_resource type="Texture2D" uid="uid://2ebonm8vd2e" path="res://assets/Menu/pressed.png" id="3_4wel7"]
[ext_resource type="FontFile" uid="uid://bkkwgywjc5xo" path="res://assets/fonts/born2bsporty-fs/Born2bSportyFS.otf" id="4_4wel7"]
[ext_resource type="Texture2D" uid="uid://dgi3rfiea36qg" path="res://assets/Menu/unpressed.png" id="6_b5hqg"]
[ext_resource type="PackedScene" uid="uid://8wpn4o507iat" path="res://ui/level_selection/level_preview.tscn" id="7_48mtt"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tyw7")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0.39215687)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a7te6")
expand_mode = 2

[node name="WindowTitle" type="Sprite2D" parent="Window"]
position = Vector2(960, 128)
scale = Vector2(0.3236994, 0.2128514)
texture = ExtResource("3_4wel7")

[node name="Label" type="Label" parent="Window/WindowTitle"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -519.0
offset_top = -300.67923
offset_right = -519.0
offset_bottom = -300.67923
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4wel7")
theme_override_font_sizes/font_size = 300
text = "LEVELS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.119531
anchor_top = 0.151389
anchor_right = 0.164063
anchor_bottom = 0.240278
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_2tyw7")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.143
anchor_right = 0.88400006
anchor_bottom = 0.85200006
offset_left = 14.719986
offset_top = 93.56001
offset_right = -491.9469
offset_bottom = -224.15997
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
texture_filter = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 12
columns = 5

[node name="SelectButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 752.0
offset_top = 840.0
offset_right = -960.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Select"
flat = true

[node name="Select" type="TextureButton" parent="SelectButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.5258789e-05
offset_top = -1.478195e-05
offset_right = 1872.0
offset_bottom = 503.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("6_b5hqg")
texture_pressed = ExtResource("3_4wel7")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SelectButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4wel7")
theme_override_font_sizes/font_size = 40
text = "SELECT"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="LevelPreview" parent="." instance=ExtResource("7_48mtt")]
visible = false
layout_mode = 1

[connection signal="pressed" from="BackButton" to="." method="_on_goback_pressed"]
[connection signal="pressed" from="SelectButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="SelectButton/Select" to="." method="_on_play_pressed"]
